OldArchive/a70726d83848b74c7b18d40d322c6cd9-72fee2202119e520f0789535ae5005e0/output
+ g++-4.8 -c -std=c++11 main.cpp
main.cpp: In constructor 'Item::Item()':
main.cpp:5:16: error: invalid initialization of non-const reference of type 'int&' from an rvalue of type '<brace-enclosed initializer list>'
         int& x{};
                ^
